<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:keepScreenOn="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.forbess.journeytracker_sf.MainActivity"
    tools:showIn="@layout/activity_main">
    
    <com.example.forbess.journeytracker_sf.CustomView
        android:id="@+id/customview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GPS" />
    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed" />

    <TextView
        android:id="@+id/average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average" />

    <TextView
        android:id="@+id/overall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overall" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4c94e6"
        android:text="@string/start"/>
</LinearLayout>
